Bug 1892653 - Fix repeating oklch gradients r=gfx-reviewers,lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D208960